// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header__Line /> should render correctly 1`] = `
.c0 {
  width: 1px;
  margin: auto;
  background: #666666;
  height: 48px;
}

<div
  className="c0"
/>
`;

exports[`<Header__Section /> should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0"
/>
`;

exports[`<Header__Wrapper /> should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-between;
  -webkit-justify-content: space-between;
  -ms-flex-pack: space-between;
  justify-content: space-between;
  height: 50px;
  box-sizing: border-box;
  background: #212121;
}

<div
  className="c0"
/>
`;

exports[`<Line/> should render correctly 1`] = `
.c0 {
  width: 1px;
  margin: auto;
  background: #666666;
  height: 48px;
}

<div
  className="c0"
/>
`;

exports[`<Line/> should render correctly if is \`partial\` 1`] = `
.c0 {
  width: 1px;
  margin: auto;
  background: #666666;
  height: 35px;
}

<div
  className="c0"
/>
`;
